Fix qrcode scan not showing on mobile

--- a/src/components/messages/NewChat/NewChat.scss
+++ b/src/components/messages/NewChat/NewChat.scss
@@ -42,11 +42,19 @@
     }
 
     .Input {
-      width: 80%;
+      width: 100%;
     }
   }
   &__input-container {
     padding: 0 calc(1.25em - 0.4em);
+    width: 100%;
+    align-items: center;
+    gap: 1em;
+    display: flex;
+
+    .Input {
+      width: 100%;
+    }
   }
 }
 
